--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
                 <div>
                     <h2 class="about__subtitle">I'am Tejaswan</h2>
-                    <p class="about__text">I am a computer science student at ellenki collage of engineering.
-                        I am very passionate about app and web development I have very good skills in development</p>
+                    <p class="about__text">I am a computer science student at Ellenki collage of engineering.
+                        I am very passionate about app and web development.I have very good skills in development</p>
                 </div>
             </div>
         </section>
@@ -87,8 +87,8 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Profesional Skills</h2>
-                    <p class="skills__text">skills are very importent for technique domain. Mostly development skills
-                        are very importent as a software engineer check out my skills.
+                    <p class="skills__text">skills are very important for technical domain. Mostly development skills
+                        are very important as a software engineer.Check out my skills.
                     </p>
                     <div class="skills__data">
                         <div class="skills__names">
