--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <input type="button" value="submit" class="contact__button button">
                 </form> -->
                 <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
-                    action="https://script.google.com/macros/s/AKfycbyzDeAl8UEx8irGg2BdXyd94oSxdsOLqSEi60PH/exec">
+                    action="https://script.google.com/macros/s/AKfycbyzDeAl8UEx8irGg2BdXyd94oSxdsOLqSEi60PH/exec" data-netlify="true">
                     <!-- change the form action to your script url -->
 
                     <div class="form-elements">
@@ -298,7 +298,6 @@
                         </fieldset>
 
 
-
                         <fieldset class="pure-group honeypot-field" style="display: none;">
                             <label for="honeypot">To help avoid spam, utilize a Honeypot technique with a hidden text
                                 field;
@@ -306,7 +305,7 @@
                             <input id="honeypot" type="text" name="honeypot" value="" />
                         </fieldset>
 
-                        <button class="button-success pure-button button-xlarge">
+                        <button class="button-success pure-button button-xlarge" type="submit">
                             <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
                     </div>
 
