added netlify submission

--- a/index.html
+++ b/index.html
@@ -275,8 +275,7 @@
                     <textarea name="" id="" cols="0" rows="10" class="contact__input" id="message"></textarea>
                     <input type="button" value="submit" class="contact__button button">
                 </form> -->
-                <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
-                    action="https://script.google.com/macros/s/AKfycbyzDeAl8UEx8irGg2BdXyd94oSxdsOLqSEi60PH/exec" data-netlify="true">
+                <form class="gform pure-form pure-form-stacked" method="POST" data-netlify="true">
                     <!-- change the form action to your script url -->
 
                     <div class="form-elements">
