--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/tejaswan-kalluri-144607188/" class="home__social-icon"><i
                         class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/tejaswankalluri82522" class="home__social-icon"><i
+                <a href="https://github.com/tejaswankalluri" class="home__social-icon"><i
                         class='bx bxl-github'></i></a>
                 <a href="https://www.youtube.com/channel/UCE6CGqVEN9wOTZcPKXNNy0g" class="home__social-icon"><i
                         class='bx bxl-youtube'></i></a>
