--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/img/fav_ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://img.icons8.com/cotton/64/000000/user-male--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
 
     <!-- =====BOX ICONS===== -->
