google domain verification

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="https://img.icons8.com/cotton/64/000000/user-male--v1.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
-
+    <!--google domain verfication-->
+    <meta name="google-site-verification" content="RY_AX27wZAcTP-SG1DKFsh3OLF_OxZHH7yo-xgnB_Us" />
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
