--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <!--google domain verfication-->
     <meta name="google-site-verification" content="RY_AX27wZAcTP-SG1DKFsh3OLF_OxZHH7yo-xgnB_Us" />
+    <!--  meta tag    -->
+    <meta name="title" content="Tejaswan - Portfolio">
+    <meta name="description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
+    <meta name="keywords" content="tejaswan portfolio, tejaswan kalluri, tejaswan">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
