Updated meta tags

--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
     <meta name="robots" content="index, follow">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Tejaswan - My Portfolio">
+    <meta itemprop="description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
+    <meta itemprop="image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://tejaswan.netlify.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Tejaswan - My Portfolio">
+    <meta property="og:description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
+    <meta property="og:image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tejaswan - My Portfolio">
+    <meta name="twitter:description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
+    <meta name="twitter:image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+    
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
