--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Tejaswan - My Portfolio">
     <meta itemprop="description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
-    <meta itemprop="image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+    <meta itemprop="image" content="">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://tejaswan.netlify.app">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tejaswan - My Portfolio">
     <meta property="og:description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
-    <meta property="og:image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+    <meta property="og:image" content="">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Tejaswan - My Portfolio">
     <meta name="twitter:description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
-    <meta name="twitter:image" content="https://tejaswan.netlify.app/assets/img/about.jpg">
+    <meta name="twitter:image" content="">
     
     <!-- =====BOX ICONS===== -->
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
