--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="content_title"><h4>Weather website</h4></div>
                         <div class="content_body">This website get weather of your location </div>
                         <a href="https://github.com/tejaswankalluri/node-weather">github link</a>
-                        <a href="https://ejs-weather.herokuapp.com/" target="_blank">project link</a>
+                        <a href="https://ejs-weatherapp.herokuapp.com/" target="_blank">project link</a>
                     </div>
                 </div>
                 <div class="work__img">
@@ -312,8 +312,8 @@
                     <div class="content">
                         <div class="content_title"><h4>Todo list Web App</h4></div>
                         <div class="content_body">This website is used to store todos</div>
-                        <a href="https://github.com/tejaswankalluri/node-todo-list">github link</a>
-                        <a href="https://ejs-todos-app.herokuapp.com/" target="_blank">project link</a>
+                        <a href="https://github.com/tejaswankalluri/node-todolist-login">github link</a>
+                        <a href="https://ejs-todo-login.herokuapp.com/" target="_blank">project link</a>
                     </div>
                 </div>
                 </div>
