--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
                 <div>
                     <h2 class="about__subtitle">I'am Tejaswan</h2>
-                    <p class="about__text">I am a computer science student at Ellenki collage of engineering.
-                        I am very passionate about app and web development.I have very good skills in development</p>
+                    <p class="about__text">I am a computer science student at Ellenki college of engineering.
+                        I am very passionate about web development. I have very good skills in development</p>
                 </div>
             </div>
         </section>
