update: data in homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://img.icons8.com/cotton/64/000000/user-male--v1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/styles.css">
     <!--google domain verfication-->
     <meta name="google-site-verification" content="RY_AX27wZAcTP-SG1DKFsh3OLF_OxZHH7yo-xgnB_Us" />
@@ -21,7 +21,7 @@
     <meta itemprop="image" content="">
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://tejaswan.netlify.app">
+    <meta property="og:url" content="https://tejaswan.codes">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tejaswan - My Portfolio">
     <meta property="og:description" content="This website is about me. Hi this is Tejaswan, I am a web developer">
@@ -56,6 +56,7 @@
                     <li id="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
                     <li id="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                     <li id="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
+                    <li id="nav__item"><a href="https://dev.to/tejaswan" class="nav__link" target="_blank">Blog</a></li>
                 </ul>
             </div>
 
@@ -77,11 +78,10 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.linkedin.com/in/tejaswan-kalluri-144607188/" class="home__social-icon"><i
+                <a href="https://www.linkedin.com/in/tejaswan-kalluri/" class="home__social-icon"><i
                         class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/tejaswankalluri" class="home__social-icon"><i class='bx bxl-github'></i></a>
-                <a href="https://www.youtube.com/channel/UCE6CGqVEN9wOTZcPKXNNy0g" class="home__social-icon"><i
-                        class='bx bxl-youtube'></i></a>
+                <a href="https://dev.to/tejaswan" class="home__social-icon"><i class='bx bxl-dev-to'></i></a>
             </div>
 
             <div class="home__img">
@@ -264,6 +264,19 @@
 
             <div class="work__container bd-grid">
                 <div class="work__img">
+                    <img src="assets/img/projects-img/Linkit.jpg" alt="">
+                    <div class="content">
+                        <div class="content_title">
+                            <h4>Linkit</h4>
+                        </div>
+                        <div class="content_body">Users can store social media links and share there public link
+                        </div>
+                        <a href="https://github.com/tejaswankalluri/LinkIt-Frontend" target="_blank">github link</a>
+                        <a href="https://linkit.tejaswan.codes" target="_blank">project link</a>
+                    </div>
+                </div>
+
+                <div class="work__img">
                     <img src="assets/img/projects-img/work-1.jpg">
                     <div class="content">
                         <div class="content_title">
@@ -272,18 +285,6 @@
                         <div class="content_body">This website is used to track covid cases</div>
                         <a href="https://github.com/tejaswankalluri/covid19-tracker" target="_blank">github link</a>
                         <a href="https://trackcovid2020.netlify.app/" target="_blank">project link</a>
-                    </div>
-                </div>
-                <div class="work__img">
-                    <img src="assets/img/projects-img/work-2.jpg" alt="">
-                    <div class="content">
-                        <div class="content_title">
-                            <h4>news blog</h4>
-                        </div>
-                        <div class="content_body">This blog is created with wordpress and It is a tech news website
-                        </div>
-                        <a href="" class="disabled-link">github link</a>
-                        <a href="http://phonemozo.is-best.net/" target="_blank">project link</a>
                     </div>
                 </div>
                 <div class="work__img">
@@ -404,8 +405,7 @@
                     class='bx bxl-instagram'></i></a>
             <a href="https://twitter.com/tejaswan1" class="footer__icon" target="_blank"><i
                     class='bx bxl-twitter'></i></a>
-            <a href="https://www.youtube.com/channel/UCE6CGqVEN9wOTZcPKXNNy0g" class="footer__icon" target="_blank"><i
-                    class='bx bxl-youtube'></i></a>
+            <a href="https://dev.to/tejaswan" class="footer__icon" target="_blank"><i class='bx bxl-dev-to'></i></a>
             <a href="mailto:tejaswankalluri82522@gmail.com" class="footer__icon" target="_blank"><i
                     class='bx bx-mail-send'></i></a>
         </div>
